# ffmpeg_app

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luongtd14/ffmpeg_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_mux_init.c
app/src/main/cpp/mmfw_include/include/arm64-v8a/: cmdutils.h  config.h  config_components.h  ffmpeg.h  ffmpeg_utils.h
app/src/main/cpp/mmfw_include/include/arm64-v8a/compat/aix/: math.h
app/src/main/cpp/mmfw_include/include/arm64-v8a/compat/djgpp/: math.c
app/src/main/cpp/mmfw_include/include/arm64-v8a/compat/float/: float.h  limits.h
app/src/main/cpp/mmfw_include/include/arm64-v8a/libavutil/: log.h
app/src/main/java/com/luongtd14/ffmpeg_app/: MainActivity.java
app/src/main/java/com/luongtd14/ffmpeg_app/utils/: FileUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/luongtd14/ffmpeg_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
